# rust-rsshub

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DETAILED_PLAN.md  DOCS_INDEX.md  Dockerfile  IMPLEMENTATION_PROGRESS.md  PROJECT_OVERVIEW.md  README.md  TEST_REPORT.md  docker-compose.yml
configs/: iczelia.yml  jgc.yml  observationalhazard.yml  test-example.yml
docs/: AI_CONFIG_GUIDE.md  DOCKER_DEPLOYMENT.md  QUICK_REFERENCE.md
scripts/: deploy.sh  test-config.sh
src/: error.rs  lib.rs  main.rs
src/config/: mod.rs  parser.rs  types.rs
src/fetcher/: cache.rs  http.rs  mod.rs
src/generator/: atom.rs  mod.rs  rss.rs
src/parser/: html.rs  mod.rs
src/plugins/: mod.rs  registry.rs
src/router/: handlers.rs  mod.rs
tests/: cache_test.rs  config_test.rs  config_validation_test.rs  date_parser_test.rs  error_test.rs  fetcher_test.rs  parser_integration_test.rs  parser_test.rs  parser_validation_test.rs
