[package]
name = "rust-rsshub"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]

[dependencies]
# 异步运行时
tokio = { version = "1.40", features = ["full"] }

# Web 框架
axum = { version = "0.7", features = ["multipart"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# HTTP 客户端
reqwest = { version = "0.12", features = ["json", "cookies"] }

# HTML 解析
scraper = "0.20"
select = "0.6"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# RSS/Atom 生成
rss = "2.0"
atom_syndication = "0.12"

# 日期处理
chrono = { version = "0.4", features = ["serde"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 错误处理
anyhow = "1.0"
thiserror = "1.0"

# 配置和环境变量
config = "0.14"

# 文件系统监控(可选)
notify = { version = "6.1", optional = true }

# URL 处理
url = "2.5"

# 编码检测
encoding_rs = "0.8"

[dev-dependencies]
tokio-test = "0.4"

[features]
default = ["file-watch"]
file-watch = ["notify"]

[[bin]]
name = "rust-rsshub"
path = "src/main.rs"
